# hyper-connect-py

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  Makefile  README.md  examples.py  examples_async.py  lint.sh  mypy.ini  pre-commit-config.yaml  pyproject.toml  requirements.txt  sandbox.py  test.sh
foo/: test_005_integrate_search_happy.py  test_006_integrate_storage.py  test_007_integrate_storage_txt.py  test_008_integrate_queue.py  test_009_integrate_queue_errors.py
hyper_connect/: __init__.py  _hyper_connect.py
tests/: hyper_downloaded.txt  test_0005_integrate_data_async_happy.py  test_0010_integrate_data_async_sad.py  test_0015_integrate_data_sync_happy.py  test_0016_integrate_data_sync_sad.py  test_0020_integrate_cache_async_happy.py  test_0025_integrate_cache_sync_happy.py  test_002_happy_integration.py  test_002_integrate_data_async_happy.py  test_002_integrate_data_happy.py  test_002_integration.py  test_0030_integrate_search_async_happy.py  test_0031_integrate_search_async_sad.py  test_0035_integrate_search_sync_happy.py  test_003_integrate_data_sad.py  test_003_sad_integration.py  test_0040_integrate_storage_png_async_happy.py  test_0041_integrate_storage_txt_async_happy.py  test_0043_integrate_storage_png_sync_happy.py  test_0044_integrate_storage_txt_sync_happy.py  test_004_integrate_cache_happy.py  test_0050_integrate_info_async_happy.py  test_0055_integrate_info_sync_happy.py  test_005_integrate_search_happy.py  test_0060_integrate_queue_async_happy.py  test_0065_integrate_queue_async_errors_happy.py  test_006_integrate_storage.py  test_006_integrate_storage_png.py  test_0070_integrate_queue_sync_happy.py  test_0075_integrate_queue_sync_errors_happy.py  test_007_integrate_storage_txt.py  test_008_integrate_queue.py  test_009_integrate_queue_errors.py  test_010_integrate_info_errors.py  test_create_hyper_request_params.py  z_test_005_integrate_search_happy.py  ztest_001_create_hyper_request_params.py  ztest_004_integrate_cache_happy.py
(+34 files in other folders)
